# ketu

./: .gitignore  CMakeLists.txt  LICENSE  README.md  capture_views.cpp  cessna.osg  main.cpp
communication/: CMakeLists.txt  communication_client.cpp  communication_client.h  interfaces.h  types.h
formation/: CMakeLists.txt  composite_formation_coordinator.cpp  composite_formation_coordinator.h  composite_formation_coordinator_test.cpp  formation_coordinator.h  grid_formation_coordinator.cpp  grid_formation_coordinator.h  interface.cpp  interface.h  mesh_based_formation_coordinator.cpp  mesh_based_formation_coordinator.h  proximity_based_formation_coordinator.cpp  proximity_based_formation_coordinator.h
objects/: CMakeLists.txt  node.cpp  node.h
planning/: CMakeLists.txt  movement.cpp  movement.h
scenarios/: CMakeLists.txt  collision_avoidance.cpp  collision_avoidance.h  random_nodes.cpp  random_nodes.h  scenario.cpp  scenario.h  simulation_viewer.h  swarm.cpp  swarm.h
scenarios/raylib/: rlights.h
scenarios/raylib/shaders/: lighting.fs
sensing/: CMakeLists.txt  sensing_client.cpp  sensing_client.h
telemetry/: CMakeLists.txt  position.cpp  position.h  position_util.cpp  position_utils.h
world/: CMakeLists.txt  world.cpp  world.h
